--- a/Cleo/i18n/dialogue-event-en.json
+++ b/Cleo/i18n/dialogue-event-en.json
@@ -1,5 +1,5 @@
 {
-    "GrandmaShop": "Do you have any Red Velvet cake?",
+    "GrandmaShop": "Do you have any red velvet cake?",
     "LoseCharacterCard": "Oh. Well would you look at that.",
     "LoseCharacterCard_{{CharacterType}}": [ "Could have been worse!" ],
     "CrystallizedFriendEvent": "Just drop me off at the next repair yard.",
@@ -21,10 +21,10 @@
         ], 
         [
             "Not sure how I could do that, now that I'm on your side.",
-            "I guess I could use my autopilot if you really want to."
+            "I guess I could Kiwi pilot it if you really want to."
         ],
         [
-            "Good call.",
+            "I don't want to fight me either.",
             "Do we still need anything?"
         ],
         [
@@ -49,10 +49,51 @@
             "Two for the price of one!"
         ],
         [
-            "This will go great with me!"
+            "This will go great with my setup!"
         ],
         [
             "Done!"
+        ],
+        [
+            "How is this gonna work, now that you're with us?",
+            "I left my tools in my workshop. I'll just use those.",
+            "What do we need?"
+        ],
+        [
+            "How does your workshop keep moving around if you aren't there to pilot it?",
+            "I have Kiwi do all the work.",
+            "What do we need?"
+        ],
+        [
+            "Do you have any boba in your workshop?",
+            "No.",
+            "What do we need, other than boba apparently?"
+        ],
+        [
+            "Thank you for helping us as much as you have.",
+            "Of course!",
+            "What do we need?"
+        ],
+        [
+            "Finally. I was hoping we would run into one of these soon.",
+            "They are pre-programmed, you know?",
+            "Oh right.",
+            "What do we need?"
+        ],
+        [
+            "I'm trusting you, Eunice. Don't steal anything just cause I'm on your team this time.",
+            "Yes ma'am.",
+            "Good. What do we need?"
+        ],
+        [
+            "Something isn't right about this. Like we modified this loop somehow.",
+            "Nah, this is perfectly normal.",
+            "What do we need?"
+        ],
+        [
+            "Thank you, Ms. Cleo!",
+            "You're welcome Books!",
+            "What do we need?"
         ]
     ],
     "Soggins_Infinite": "Who gave you that USB?",
