--- a/Cleo/i18n/dialogue-event-en.json
+++ b/Cleo/i18n/dialogue-event-en.json
@@ -21,7 +21,7 @@
         ], 
         [
             "Not sure how I could do that, now that I'm on your side.",
-            "I guess I could Kiwi pilot it if you really want to."
+            "I guess I could get Kiwi to pilot it if you really want to."
         ],
         [
             "I don't want to fight me either.",
