--- a/Cleo/i18n/dialogue-event-en.json
+++ b/Cleo/i18n/dialogue-event-en.json
@@ -24,7 +24,7 @@
             "I guess I could get Kiwi to pilot it if you really want to."
         ],
         [
-            "I don't want to fight me either.",
+            "Good call.",
             "Do we still need anything?"
         ],
         [
