--- a/Cleo/i18n/main-en.json
+++ b/Cleo/i18n/main-en.json
@@ -59,6 +59,10 @@
         "SelfImpair": {
             "name": "Self Impair",
             "description": "<c=action>Downgrade</c> this card to its non-upgraded version. The downgrade lasts until this card is played, or until combat ends."
+        },
+        "ImpairCost": {
+            "name": "Impair",
+            "description": "<c=action>Downgrade</c> the rightmost eligible card in hand to its non-upgraded version to pay for the corresponding action. The downgrade lasts until the card is played, or until combat ends."
         }
     },
     "cardTrait": {
