--- a/Cleo/i18n/main-en.json
+++ b/Cleo/i18n/main-en.json
@@ -5,7 +5,8 @@
             "<c=8A3388>CLEO</c>",
             "Your shopkeeper.",
             "Capable of <c=keyword>temporarily upgrading and downgrading</c> cards in your hand and benefiting from them."
-        ]
+        ],
+        "nameKiwi": "Kiwi Drone"
     },
     "action": {
         "UpgradesInHand": {
