--- a/Cleo/i18n/dialogue-event-en.json
+++ b/Cleo/i18n/dialogue-event-en.json
@@ -94,6 +94,13 @@
             "Thank you, Ms. Cleo!",
             "You're welcome Books!",
             "What do we need?"
+        ],
+        [
+            "...",
+            "Ah, right.",
+            "The consequences of our actions.",
+            "Why did we destroy my ship again?",
+            "Hubris? Lets get going."
         ]
     ],
     "Soggins_Infinite": "Who gave you that USB?",
